# unity-scope-soundcloud

./: CMakeLists.txt  accounts.go  build.sh  manifest.json.in  setup.cfg  setup.py  soundcloud.application.in  soundcloud.go  soundcloud.ini  soundcloud.provider.in
accounts/: accounts.c  soundcloud.provider  soundcloud.service
click/: CMakeLists.txt  manifest.json  manifest.json.in  scope-security.json  soundcloud.apparmor  soundcloud.application.in  soundcloud.provider.in  soundcloud.service.in
click/qml-plugin/: Main.qml
cmake/: FindIntltool.cmake
data/: CMakeLists.txt  com.ubuntu.scopes.soundcloud_soundcloud.ini  com.ubuntu.scopes.soundcloud_soundcloud.ini.in  com.ubuntu.scopes.unity-scope-soundcloud_soundcloud.ini  soundcloud.scope  soundcloud.scope.in  unity-scope-soundcloud.service
debian/: changelog  control  copyright  rules
include/api/: client.h  comment.h  config.h  resource.h  track.h  user.h
include/scope/: activation.h  localization.h  preview.h  query.h  scope.h
po/: POTFILES.in  en_GB.po  unity-scope-soundcloud.pot
qml-plugin/: Main.qml
src/: CMakeLists.txt  unity_soundcloud_daemon.py
src/api/: client.cpp  comment.cpp  track.cpp  user.cpp
src/scope/: activation.cpp  preview.cpp  query.cpp  scope.cpp
tests/: test_soundcloud.py
tests/data/: mock_soundcloud_pass
tests/server/: server.py
tests/server/activity/: tracks.json
tests/server/genre/: Hip Hop.json  Popular Music.json
tests/server/search/: hermitude.json
tests/unit/: CMakeLists.txt
tests/unit/scope/: test-scope.cpp
